--- a/dolatsara.html
+++ b/dolatsara.html
@@ -112,7 +112,11 @@
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">انتخاب شهر</h5>
+                  <div class="dolatsara__header">
+                    <h5 class="modal-title">انتخاب شهر</h5>
+                    <button class="dolatsara__delete-all">حذف همه</button>
+
+                  </div>
                   <span class="dolatsara__selected-city">حداقل یک شهر را انتخاب کنید.</span>
                   <div class="dolatsara__city-name-parent">
 <!-- 
